[package]
name = "u5client"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
config = "0.14"
hex = "0.4.3"
prost = "0.12.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }
tonic = "0.11.0"
utxorpc-spec = { version = "0.8.0" }